--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "coverage>=7.11.0",
     "django>=5.2.3",
     "django-stubs-ext>=5.2.1",
     "django-types>=0.21.0",
